--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.23.0",
     "react-loader-spinner": "^4.0.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
