--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_FOOTBALL_URL = 'https://www.scorebat.com/video-api/v3/';
+REACT_APP_FOOTBALL_URL = https://www.scorebat.com/video-api/v3/;
+REACT_APP_SERVER_URL = https://fe.it-academy.by/AjaxStringStorage2.php;
