--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "aos": "^2.3.4",
     "axios": "^0.24.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.23.0",
@@ -20,8 +25,10 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "typescript": "^4.5.4",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.2"
   },
