--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "aos": "^2.3.4",
     "axios": "^0.24.0",
+    "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +26,6 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-scroll": "^1.8.4",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
