--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "uniqid": "^5.4.0",
+    "use-async-selector": "^0.2.7",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
