--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "footbal-app",
-  "homepage": "./",
+  "homepage": "*/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,9 +8,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -31,15 +28,15 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
-    "uniqid": "^5.4.0",
-    "use-async-selector": "^0.2.7",
-    "web-vitals": "^2.1.2"
+    "uniqid": "^5.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages - build"
   },
   "eslintConfig": {
     "extends": [
